--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -1,4 +1,2 @@
-<p>Auto-resizing sidenav</p>
-
-<a routerLink="/games" routerLinkActive="active">Games</a>
-<a routerLink="/competitions" routerLinkActive="active">Competitions</a>
+<app-user></app-user>
+<app-nav></app-nav>
